Minor changes in fleq/template/custom/base-mini.html in order to fix some problems with links

--- a/fleq/template/custom/base-mini.html
+++ b/fleq/template/custom/base-mini.html
@@ -129,11 +129,12 @@
 						<li>
 							<h2>Learn to use it!</h2>
 							
-								<li><a href="#">Videos: Step by step</a></li>
-							
-							<a href="http://trivial.libresoft.es/FAQ"  rel="external" > Frecuently Asked Questions</a> 
+								<a href="http://trivial.libresoft.es/stepbystep" rel="external" >Videos: Step by step</a>
+                                                                <br>							
+							        <a href="http://trivial.libresoft.es/FAQ"  rel="external" > Frecuently Asked Questions</a> 
 								<br>
-								<a href=" http://es.scribd.com/doc/176819823/FAQ" > Download FAQ pdf</a>
+								<!--<a href=" http://es.scribd.com/doc/176819823/FAQ" > Download FAQ pdf</a>-->
+                                                                <a href="http://pfc-clavado.libresoft.es/images/FAQ.pdf"  rel="external"> Download FAQ pdf</a>
 								<br>
 								<br>
 						</li>
